Use "евроцент" wording for cents in bg transcriber

--- a/Invoices/design/template.html
+++ b/Invoices/design/template.html
@@ -637,7 +637,7 @@
             <div class="bottom-grid">
                 <section>
                     <h2 class="block-title">Словом</h2>
-                    <div class="small" id="totalWords">петстотин деветдесет и осем евро и двадесет и един цента</div>
+                    <div class="small" id="totalWords">петстотин деветдесет и осем евро и двадесет и един евроцента</div>
 
 
                     <div class="tax-mini" aria-label="Tax event info">
