--- a/Invoices/design/template.html
+++ b/Invoices/design/template.html
@@ -29,17 +29,13 @@
 
         body {
             margin: 0;
+            padding: 0;
             font-family: var(--sans);
             color: var(--ink);
-            background: #0b1020;
-            padding: 20px;
         }
 
         .app {
-            max-width: 1100px;
-            margin: 0 auto;
-            display: grid;
-            gap: 16px;
+            margin: 0;
         }
 
         .toolbar {
@@ -124,8 +120,6 @@
             min-height: 297mm;
             margin: 0 auto;
             background: var(--paper);
-            border-radius: 14px;
-            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.40);
             overflow: hidden;
             position: relative;
         }
