--- a/design/invoicer.uiprototype.v1.html
+++ b/design/invoicer.uiprototype.v1.html
@@ -141,9 +141,9 @@
 
     .card{
       background: var(--panel);
-      border:1px solid var(--border);
+      border: 1px solid rgba(226,232,240,.85);
       border-radius: var(--radius);
-      box-shadow: var(--shadow);
+      box-shadow: var(--shadow2);
       overflow:hidden;
     }
 
@@ -171,7 +171,7 @@
       color: var(--muted2);
     }
 
-    .card-body{ padding: 10px; }
+    .card-body{ padding: 0; }
 
     /* Buttons */
     .btn{
@@ -220,7 +220,7 @@
     .list{
       display:flex;
       flex-direction:column;
-      gap: 8px;
+      gap: 0;
     }
 
     .row{
@@ -228,20 +228,21 @@
       display:grid;
       grid-template-columns: 160px 1fr auto;
       gap: 12px;
-      padding: 12px 12px;
-      border:1px solid rgba(226,232,240,.9);
-      border-radius: 14px;
-      background: rgba(255,255,255,.9);
-      transition: border-color .15s ease, transform .08s ease, box-shadow .15s ease;
+      padding: 12px 14px;
+      border:none;
+      border-bottom: 1px solid rgba(226,232,240,.7);
+      border-radius: 0;
+      background: transparent;
+      transition: background .15s ease;
+    }
+    .row:last-child{
+      border-bottom: none;
     }
     .row:hover{
-      border-color: rgba(124,58,237,.20);
-      box-shadow: 0 10px 20px rgba(15,23,42,.06);
-      transform: translateY(-1px);
+      background: rgba(248,250,252,.6);
     }
     .row.selected{
-      border-color: rgba(124,58,237,.35);
-      box-shadow: 0 14px 30px rgba(124,58,237,.10);
+      background: rgba(124,58,237,.06);
     }
 
     .meta{
@@ -327,16 +328,18 @@
       align-items:flex-start;
       justify-content:space-between;
       gap: 12px;
-      padding: 12px;
-      border:1px solid rgba(226,232,240,.9);
-      border-radius: 14px;
-      background: rgba(255,255,255,.9);
-      transition: border-color .15s ease, box-shadow .15s ease, transform .08s ease;
+      padding: 12px 14px;
+      border:none;
+      border-bottom: 1px solid rgba(226,232,240,.7);
+      border-radius: 0;
+      background: transparent;
+      transition: background .15s ease;
+    }
+    .client-item:last-child{
+      border-bottom: none;
     }
     .client-item:hover{
-      border-color: rgba(34,193,195,.28);
-      box-shadow: 0 10px 20px rgba(15,23,42,.06);
-      transform: translateY(-1px);
+      background: rgba(248,250,252,.6);
     }
     .client-left{
       min-width:0;
@@ -1153,7 +1156,7 @@
       });
 
       if(list.length === 0){
-        root.innerHTML = `<div class="muted" style="padding:10px;">No invoices match your search.</div>`;
+        root.innerHTML = `<div class="muted" style="padding:14px;">No invoices match your search.</div>`;
       }
     }
 
@@ -1188,7 +1191,7 @@
       });
 
       if(list.length === 0){
-        root.innerHTML = `<div class="muted" style="padding:10px;">No clients match your search.</div>`;
+        root.innerHTML = `<div class="muted" style="padding:14px;">No clients match your search.</div>`;
       }
     }
 
